fixing correct link to teachers

--- a/index.Rmd
+++ b/index.Rmd
@@ -18,9 +18,9 @@ subtitle: "3-day, online ISCB course in biostatistics (15-19 April 2024)"
 
 ### Workshop teachers
 
-[Nicola Orsini](https://www.med.uio.no/imb/english/people/aca/jonmic/index.html){target="_blank"}, Principle Invistigator at Karolinska Institutet.
+[Nicola Orsini](https://ki.se/en/people/nicola-orsini){target="_blank"}, Principle Invistigator at Karolinska Institutet.
 
-[Alessio Crippa](https://www.lshtm.ac.uk/aboutus/people/keogh.ruth){target="_blank"}, Senior Research Specialist at Karolinska Institutet.
+[Alessio Crippa](https://ki.se/en/people/alessio-crippa){target="_blank"}, Senior Research Specialist at Karolinska Institutet.
 
 ---
 
