edit of teacher info, and simplifying schedule

--- a/about.Rmd
+++ b/about.Rmd
@@ -43,35 +43,10 @@ At the end of the workshop, you will be asked to provide some feedback and evalu
 
 ---
 
-###  Schedule
+###  Schedule structure
 
 
-|Time                   |Topic                                                  |Teacher                       |
-|:----------------------|:------------------------------------------------------|:-----------------------------|
-|09:15 - 09:30         |Welcome and introductions                               |                              |
-
-**Part 1: Introduction**
-
-|                       |                                                       |                              |
-|:----------------------|:------------------------------------------------------|:-----------------------------|
-|09:30 - 10:15          |Lecture:                                               | Nicola Orsini                |  
-|10:15 - 10:30          |Break                                                  |                              |  
-|10:30 - 12:00          |Practical:                                             | Alessio Crippa               |        
-
-**Part 2: **
-
-|                       |                                                       |                              |  
-|:----------------------|:------------------------------------------------------|:-----------------------------|  
-|13:00 - 14:30          |Lecture:                                               | Alessio Crippa               |  
-|14:30 - 14:45          |Break                                                  |                              |  
-|14:45 - 16:00          |Practical:                                             | Nicola Orsini                |  
-
-
-
-
-**Day 2**
- 
-**Part 3: **
+**Morning**
 
 |                       |                                                       |                              |
 |:----------------------|:------------------------------------------------------|:-----------------------------|
@@ -80,7 +55,7 @@ At the end of the workshop, you will be asked to provide some feedback and evalu
 |10:30 - 12:00          |Practical:                                             |                              |        
 
 
-**Part 4: **
+**Afternoon**
 
 |                       |                                                       |                              |  
 |:----------------------|:------------------------------------------------------|:-----------------------------|  
@@ -88,26 +63,6 @@ At the end of the workshop, you will be asked to provide some feedback and evalu
 |14:30 - 14:45          |Break                                                  |                              |  
 |14:45 - 16:00          |Practical:                                             |                              |  
 
-
-**Day 3**
- 
-**Part 5: **
-
-|                       |                                                       |                              |
-|:----------------------|:------------------------------------------------------|:-----------------------------|
-|09:30 - 10:15          |Lecture:                                               |                              |  
-|10:15 - 10:30          |Break                                                  |                              |  
-|10:30 - 12:00          |Practical:                                             |                              |        
-
-
-**Part 6: **
-
-
-|                       |                                                       |                              |  
-|:----------------------|:------------------------------------------------------|:-----------------------------|  
-|13:00 - 14:30          |Lecture:                                               |                              |  
-|14:30 - 14:45          |Break                                                  |                              |  
-|14:45 - 16:00          |Practical:                                             |                              |  
 
 
 ---
