--- a/index.Rmd
+++ b/index.Rmd
@@ -23,7 +23,7 @@ title: "Workshop on Dose-Response Meta-Analysis"
 
 ### Workshop instructors 
 
-[Nicola Orsini](https://ki.se/en/people/nicola-orsini){target="_blank"}, Principle Invistigator at Karolinska Institutet.
+[Nicola Orsini](https://ki.se/en/people/nicola-orsini){target="_blank"}, Principle Researcher at Karolinska Institutet.
 
 [Alessio Crippa](https://ki.se/en/people/alessio-crippa){target="_blank"}, Senior Research Specialist at Karolinska Institutet.
 
