re-pushing stacked commit

--- a/index.Rmd
+++ b/index.Rmd
@@ -44,7 +44,7 @@ More details about the workshop, including a preliminary schedule, can be found 
 To register for the course, please follow [this link](https://docs.google.com/forms/d/e/1FAIpQLSfWKh4smUjfiyGhBvFbgPrNt-a3G0fd3fGCmTlOAIbU90YBEw/viewform){target="_blank"}.
 
 Registration is now open and will close on March 3rd, 2024.
-Since only a limited number of seats is available, the selected participants will be informed about acceptance at latest on March 10, 2024.
+Selected participants will be informed about acceptance at latest on March 10, 2024.
 
 ---
 
